--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,11 @@ uuid = "ac49cdf8-7b4f-4237-8185-bd02ff4b1aa2"
 authors = ["giannamars <giannamars@gmail.com> and contributors"]
 version = "0.1.0"
 
+[deps]
+FieldMetadata = "bf96fef3-21d2-5d20-8afa-0e7d4c32a885"
+Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
+Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
+
 [compat]
 julia = "1"
 
